fix navbar icon alignment

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -10,9 +10,11 @@ nav {
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
+        align-items: center;
         margin-right: 8rem;
         li {
             display: flex;
+            height: 100%;
             justify-content: center;
             align-items: center;
             text-align: center;
@@ -23,14 +25,22 @@ nav {
                 cursor: pointer;
             }
             svg, a {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
                 padding: 1rem 0.5rem;
                 font-weight: 400;
                 text-decoration: none;
                 background: none;
                 color: $teal;
                 transition: color $transition;
+                transition: font-size $transition;
+                transition: padding $transition;
                 &:hover {
                     color: $dull-green;
+                    // font-size: 2rem;
+                    // padding: 0.5rem .25rem
                 }
             }
         }
